- Add `stylelint`